[gd_scene load_steps=3 format=3 uid="uid://caai5y1ec0vrm"]

[ext_resource type="Script" path="res://scene/symbol_editor_handle.gd" id="1_rmxnv"]
[ext_resource type="PackedScene" uid="uid://cbkdst3f4uqnj" path="res://scene/symbol_edit_handle_indicator.tscn" id="2_5lekb"]

[node name="SymbolEditorHandle" type="Node2D"]
z_index = 1
script = ExtResource("1_rmxnv")

[node name="Center" type="Node2D" parent="."]

[node name="TL_Anchor" type="Node2D" parent="Center"]
position = Vector2(-0.5, -0.5)

[node name="TR_Anchor" type="Node2D" parent="Center"]
position = Vector2(0.5, -0.5)

[node name="BL_Anchor" type="Node2D" parent="Center"]
position = Vector2(-0.5, 0.5)

[node name="BR_Anchor" type="Node2D" parent="Center"]
position = Vector2(0.5, 0.5)

[node name="Rot_Anchor" type="Node2D" parent="Center"]
position = Vector2(0, -1)

[node name="TL_Handle" parent="." node_paths=PackedStringArray("ref_location") instance=ExtResource("2_5lekb")]
line_width = 5.0
color = Color(0.717647, 0.235294, 0.67451, 1)
ref_location = NodePath("../Center/TL_Anchor")

[node name="TR_Handle" parent="." node_paths=PackedStringArray("ref_location") instance=ExtResource("2_5lekb")]
line_width = 5.0
color = Color(0.718078, 0.23361, 0.675337, 1)
ref_location = NodePath("../Center/TR_Anchor")

[node name="BL_Handle" parent="." node_paths=PackedStringArray("ref_location") instance=ExtResource("2_5lekb")]
line_width = 5.0
color = Color(0.718078, 0.23361, 0.675337, 1)
ref_location = NodePath("../Center/BL_Anchor")

[node name="BR_Handle" parent="." node_paths=PackedStringArray("ref_location") instance=ExtResource("2_5lekb")]
line_width = 5.0
color = Color(0.718078, 0.23361, 0.675337, 1)
ref_location = NodePath("../Center/BR_Anchor")

[node name="Rot_Handle" parent="." node_paths=PackedStringArray("ref_location") instance=ExtResource("2_5lekb")]
type = 1
line_width = 5.0
color = Color(0.718078, 0.23361, 0.675337, 1)
ref_location = NodePath("../Center/BR_Anchor")
